<resources>
    <string name="app_name">ownCloud</string>
    <string name="main_password">Password:</string>
    <string name="main_login">Username:</string>
    <string name="main_button_login">Login</string>
    <string name="main_welcome">Welcome</string>
    <string name="main_files">Files</string>
    <string name="main_music">Music</string>
    <string name="main_contacts">Contacts</string>
    <string name="main_calendar">Calendar</string>
    <string name="main_bookmarks">Bookmarks</string>
    <string name="main_settings">Settings</string>
    <string name="main_tit_accsetup">Setup Account</string>
    <string name="main_wrn_accsetup">There is no account set up on your device. In order to use this App, you need to create one.</string>
    <string name="actionbar_create">Create File</string>
    <string name="about_android">%1$s Android App</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">Create directory</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_add_session">Add new session</string>
    <string name="prefs_create_img_thumbnails">Create image thumbnails</string>
    <string name="prefs_select_oc_account">Select an account</string>
    <string name="prefs_summary_select_oc_account">Choose which of your accounts the app should use.</string>
    <string name="prefs_trackmydevice">Device Tracking</string>
    <string name="prefs_trackmydevice_summary_off">Enable this App to track your device location</string>
    <string name="prefs_trackmydevice_summary_on">This App keeps track of this device</string>
    <string name="prefs_trackmydevice_interval">Update Interval</string>
    <string name="prefs_trackmydevice_interval_summary">Update every %1$s minutes</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage Accounts</string>
    <string name="prefs_pincode">App PIN</string>
    <string name="prefs_pincode_summary">Protect your client</string>
    <string name="prefs_instant_upload">Enable instant uploads</string>
    <string name="prefs_instant_upload_summary">Instantly upload photos taken by camera</string>
    <string name="prefs_log_title">Enable Logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging History</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete History</string>
    <string name="auth_check_server">Check Server</string>
    <string name="auth_account_name">Account name</string>
    <string name="auth_host_url">Server address</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="new_session_uri_error">Incorrect address given</string>
    <string name="new_session_session_name_error">Incorrect session name</string>
    <string name="sync_string_files">Files</string>
    <string name="uploader_no_file_selected">No file selected for upload</string>
    <string name="setup_hint_username">Username</string>
    <string name="setup_hint_password">Password</string>
    <string name="setup_hint_address">Web address</string>
    <string name="setup_hint_show_password">Show password?</string>
    <string name="setup_title">Connect to your %1$s</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_top_message">Choose upload directory:</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please setup an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_wrn_no_content_title">No content to upload</string>
    <string name="uploader_wrn_no_content_text">No content was received. Nothing to upload.</string>
    <string name="uploader_error_forbidden_content">%1$s is not allowed to access the shared content</string>
    <string name="uploader_info_uploading">Uploading</string>
    <string name="uploader_btn_create_dir_text">Create directory for upload</string>
    <string name="file_list_empty">There are no files in this folder.\nNew files can be added with the \"Upload\" menu option.</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Refresh file</string>
    <string name="filedetails_redownload">Redownload</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel_download">Cancel download</string>
    <string name="common_cancel_upload">Cancel upload</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save_exit">Save &amp; Exit</string>
    <string name="common_exit">Leave %1$s</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading &#8230;</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="create_account">Create account</string>
    <string name="upload_chooser_title">Upload from &#8230;</string>
    <string name="uploader_info_dirname">Directory name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading &#8230;</string>
    <string name="uploader_upload_in_progress_content">%1$d%% Uploading %2$s</string>
    <string name="uploader_upload_succeeded_ticker">Upload succeeded</string>
    <string name="uploader_upload_succeeded_content_single">%1$s was successfully uploaded</string>
    <string name="uploader_upload_succeeded_content_multiple">%1$d files were successfully uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
    <string name="uploader_upload_failed_content_single">Upload of %1$s could not be completed</string>
    <string name="uploader_upload_failed_content_multiple">Upload failed: %1$d/%2$d files were upload</string>
    <string name="downloader_download_in_progress_ticker">Downloading &#8230;</string>
    <string name="downloader_download_in_progress_content">%1$d%% Downloading %2$s</string>
    <string name="downloader_download_succeeded_ticker">Download succeeded</string>
    <string name="downloader_download_succeeded_content">%1$s was successfully downloaded</string>
    <string name="downloader_download_failed_ticker">Download failed</string>
    <string name="downloader_download_failed_content">Download of %1$s could not be completed</string>
    <string name="downloader_not_downloaded_yet">Not downloaded yet</string>
    <string name="common_choose_account">Choose account</string>
    <string name="sync_string_contacts">Contacts</string>
    <string name="sync_fail_ticker">Synchronization failed</string>
    <string name="sync_fail_content">Synchronization of %1$s could not be completed</string>
    <string name="sync_fail_content_unauthorized">Invalid password for %1$s</string>
	<string name="sync_conflicts_in_favourites_ticker">Conflicts found</string>
	<string name="sync_conflicts_in_favourites_content">%1$d kept-in-sync files could not be sync\'ed</string>
    <string name="sync_fail_in_favourites_ticker">Kept-in-sync files failed</string>
    <string name="sync_fail_in_favourites_content">Contents of %1$d files could not be sync\'ed (%2$d conflicts)</string>
    <string name="sync_foreign_files_forgotten_ticker">Some local files were forgotten</string>
    <string name="sync_foreign_files_forgotten_content">%1$d files out of the %2$s directory could not be copied into</string>
    <string name="sync_foreign_files_forgotten_explanation">As of version 1.3.16, files uploaded from this device are copied into the local %1$s folder to prevent data loss when a single file is synced with multiple accounts.\n\nDue to this change, all files uploaded in previous versions of this app were copied into the %2$s folder. However, an error prevented the completion of this operation during account synchronization. You may either leave the file(s) as is and remove the link to %3$s, or move the file(s) into the %1$s directory and retain the link to %4$s.\n\nListed below are the local file(s), and the the remote file(s) in %5$s they were linked to.</string>
    <string name="foreign_files_move">"Move all"</string>
    <string name="foreign_files_success">"All files were moved"</string>
    <string name="foreign_files_fail">"Some files could not be moved"</string>
    <string name="foreign_files_local_text">"Local: %1$s"</string>
    <string name="foreign_files_remote_text">"Remote: %1$s"</string>
    <string name="upload_query_move_foreign_files">There is not space enough to copy the selected files into the %1$s folder. Would like to move them into instead? </string>
    <string name="use_ssl">Use Secure Connection</string>
    <string name="location_no_provider">%1$s cannot track your device. Please check your location settings</string>
    <string name="pincode_enter_pin_code">Please, insert your App PIN</string>
    <string name="pincode_enter_new_pin_code">Please, insert your new App PIN</string>
    <string name="pincode_configure_your_pin">Enter your App PIN</string>
    <string name="pincode_configure_your_pin_explanation">The PIN will be requested every time the app is started</string>
    <string name="pincode_reenter_your_pincode">Please, reenter your App PIN</string>
    <string name="pincode_remove_your_pincode">Remove your App PIN</string>
    <string name="pincode_mismatch">The App PINs are not the same</string>
    <string name="pincode_wrong">Incorrect App PIN</string>
    <string name="pincode_removed">App PIN removed</string>
    <string name="pincode_stored">App PIN stored</string>
    <string name="media_notif_ticker">"%1$s music player"</string>
    <string name="media_state_playing">"%1$s (playing)"</string>
    <string name="media_state_loading">"%1$s (loading)"</string>
    <string name="media_event_done">"%1$s playback finished"</string>
    <string name="media_err_nothing_to_play">No media file found</string>
	<string name="media_err_no_account">No account provided</string>
    <string name="media_err_not_in_owncloud">File not in a valid account</string>
    <string name="auth_testing_connection">Testing connection&#8230;</string>
    <string name="auth_expired_basic_auth_toast">Please, enter the current password</string>
    <string name="oauth_check_onoff">Login with oAuth2.</string>
    <string name="addfriend">Enter Username</string>
    <string name="add">Add </string>
    <string name="server_location">Your Home Location</string>
</resources>