<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical" 
    android:id="@+id/scroll"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/centeredRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:onClick="onRefreshClick"
            android:text="@string/auth_check_server"
            android:visibility="gone" />
        
        <TextView
            android:id="@+id/auth_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/auth_expired_basic_auth_toast"
            android:visibility="gone"
            android:layout_marginBottom="10dp" />

	    <FrameLayout 
	        android:id="@+id/hostUrlFrame"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
	        >
			<EditText
				android:id="@+id/hostUrlInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:hint="@string/auth_host_url"
				android:inputType="textUri"
				android:drawablePadding="5dp"
				android:paddingRight="55dp"
				>
				<requestFocus />
			</EditText>
			<ImageButton
			    android:id="@+id/embeddedRefreshButton"
			    android:layout_width="48dp"
			    android:layout_height="48dp"
			    android:layout_gravity="center_vertical|right"
			    android:layout_marginRight="5dp"
			    android:padding="0dp"
			    android:scaleType="fitCenter"
			    android:src="@drawable/ic_action_refresh_black"
            	android:onClick="onRefreshClick"
				android:visibility="gone"
				android:background="@android:color/transparent"
			    />
		</FrameLayout>
		<TextView
            android:id="@+id/server_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@android:drawable/stat_notify_sync"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/auth_testing_connection" />

        <CheckBox
            android:id="@+id/oauth_onOff_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onCheckClick"
            android:text="@string/oauth_check_onoff"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <EditText
            android:id="@+id/oAuthEntryPoint_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
			android:enabled="false"
            android:text="@string/oauth2_url_endpoint_auth"
            android:singleLine="true"
            android:inputType="textUri"
            android:visibility="gone" >
        </EditText>

        <EditText
            android:id="@+id/oAuthEntryPoint_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
			android:enabled="false"
            android:text="@string/oauth2_url_endpoint_access"
            android:singleLine="true"
            android:inputType="textUri"
            android:visibility="gone" />
	<TextView 
    android:id="@+id/userNameText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   	android:text="Enter userName"/> 
   	<EditText
   	    android:id="@+id/register_newuser"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	   	android:hint="Username"/>
   	<Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="0.07"
            android:entries="@array/server_array"
            android:prompt="@string/server_location" />
   <TextView 
    android:id="@+id/PasswordText1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   	android:text="Enter Password"/> 
   	<EditText
   	    android:id="@+id/password1"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	   	android:hint="@string/auth_password"
   	   	android:inputType="textPassword" />
   	<TextView 
    android:id="@+id/PasswordText2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   	android:text="Re-enter Password"/> 
   	<EditText
   	    android:id="@+id/password2"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	   	android:hint="@string/auth_password"
   	   	android:inputType="textPassword" />
   	<Button 
   	    android:id="@+id/create_newuser"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:onClick="onClickCreateNewUser"
   	    android:text="Create New User"/>
   		

</LinearLayout>
</ScrollView>